--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
             <div class="content-box">
                 <a href="https://ahil1012.github.io/gazi-live-tv.php-jamuna/" target="_blank">
                     <img src="https://play-lh.googleusercontent.com/HB_K5ZUcWFfYBcST4buqJ_Oq3g16g4F8jbWLV3jrytGLcWks9ld0R_8ccdxDS_9gqPyP" alt="T Sports Live">
+                                    </a>
+                      </div>
+            <div class="content-box">
+                <a href="https://ahil1012.github.io/gazi-php.banglavision/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/1/1d/Banglavision.svg/1200px-Banglavision.svg.png">
+                     </a>
+                      </div>
+            <div class="content-box">
+                <a href="https://ahil1012.github.io/gaz-ekatoor-tv.php/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/57/Ekattor_TV_logo.svg/1200px-Ekattor_TV_logo.svg.png">
                 </a>
             </div>
 
