--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GAZI LIVE TV WEB</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
+        @import url(');
 
         body {
     margin: 0;
@@ -138,7 +138,7 @@
     'params': {}
   };
 </script>
-<script type="text/javascript" src="https://www.highperformanceformat.com/b4c447cc76f7b509e001f3f8ff846607/invoke.js"></script>
+<script type="text/javascript" src=""></script>
 <script>
 document.getElementById("play-audio-btn").addEventListener("click", function() {
     var audio = document.getElementById("background-audio");
